--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <%= render 'layout/flashes' %>
+    <%= render 'layouts/flashes' %>
     <%= yield %>
   </body>
 </html>
