Add user friends page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,3 +6,6 @@
     <%= link_to 'Edit information', edit_user_registration_path(@user) %>
   <% end %>
 </section>
+<section>
+  <%= render 'shared/friends_stats' %>
+</section>
