--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,8 @@
         <li><%= link_to 'Odin Facebook', root_path %></li>
         <li><%= link_to current_user.first_name, user_path(current_user) %></li>
         <li><%= link_to 'Home', root_path %></li>
+        <%= render 'users/sent_friend_requests' %>
+        <%= render 'users/friend_requests' %>
         <li>
           <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
         </li>
