--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,9 @@
-<li id="comment-<%= comment.id %>">
-  <div class="commenter">
-    <%= link_to comment.user.full_name, comment.user %>
-  </div>
-  <p class="comment_content"><%= comment.content %></p>
-  <p class="timestamp"><%= format_date(comment.created_at) %></p>
-</li>
+<% if !comment.id.nil? && !comment.user.nil? && !comment.created_at.nil? %>
+  <li id="comment-<%= comment.id %>">
+    <div class="commenter">
+      <%= link_to comment.user.full_name, comment.user %>
+    </div>
+    <p class="comment_content"><%= comment.content %></p>
+    <p class="timestamp"><%= format_date(comment.created_at) %></p>
+  </li>
+<% end %>
