--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,7 @@
   </div>
   <div class="actions">
     <%= render 'shared/like_or_unlike', post: @post %>
+    <%= render 'shared/comment_form',   post: @post %>
   </div>
   <% if @post_comments.any? %>
     <ul class="comments">
