Add news feed display

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,6 @@
 <section class="post-form">
   <%= render 'shared/post_form' %>
 </section>
-
-<h1>This will be the timeline</h1>
+<section class="news-feed">
+  <%= render 'shared/news_feed' %>
+</section>
