--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,10 @@
 <% provide(:title, @user.first_name) %>
 
 <section>
-  <h1><%= @user.full_name %></h1>
+  <div>
+    <h1><%= @user.full_name %></h1>
+    <%= gravatar_for(@user) %>
+  </div>
   <% if current_user?(@user) %>
     <%= link_to 'Edit information', edit_user_registration_path(@user) %>
   <% end %>
