--- a/app/views/reactions/_reaction.html.erb
+++ b/app/views/reactions/_reaction.html.erb
@@ -1,3 +1,6 @@
 <li id="reaction-<%= reaction.id %>">
-  <%= link_to reaction.user.full_name, reaction.user %>
+  <%= link_to reaction.user do %>
+    <%= gravatar_for(reaction.user, size: 50) %>
+    <%= reaction.user.first_name %>
+  <% end %>
 </li>
