--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,8 @@
 <li>
-  <%= link_to user.full_name, user %>
+  <%= link_to user do %>
+    <%= gravatar_for(user, size: 50) %>
+    <%= user.full_name %>
+  <% end %>
   <% if display_friending_form %>
     <%= render 'users/friend_form', other_user: user,
       relationship: relationship %>
